Fixing spacing of CSS files

--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -1,172 +1,178 @@
 .container {
-	display: block;
+  display: block;
 }
 
 .loading {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: calc(100vh - 130px); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 130px);
 }
 
 .list_movies {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: center;
-	max-width: 1150px;
-	margin: 50px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1150px;
+  margin: 50px auto;
 }
+
 .title {
-	width: 100%;
-	margin: 50px auto;
+  width: 100%;
+  margin: 50px auto;
 }
+
 .title h1 {
-	font-size: 2.1em !important;
-    font-weight: 700;
-    line-height: 1.5;
+  font-size: 2.1em !important;
+  font-weight: 700;
+  line-height: 1.5;
 }
+
 .title p {
-	font-size: 1.1em !important;
-    font-weight: 500;
+  font-size: 1.1em !important;
+  font-weight: 500;
 }
 
-.title form input{
-	padding: 13px 20px;
-	border: none;
-	border: 1px solid #cccccc;
-	width: 90%;
-	outline: none;
-	margin-top: 20px;
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
+.title form input {
+  padding: 13px 20px;
+  border: none;
+  border: 1px solid #cccccc;
+  width: 90%;
+  outline: none;
+  margin-top: 20px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
-.title form button{
-	width: 10%;
-	background-color: #3E98C7;
-	padding: 13px 20px;
-	border: none;
-	cursor: pointer;
-	border-top-right-radius: 5px;
-	border-bottom-right-radius: 5px;
+.title form button {
+  width: 10%;
+  background-color: #3E98C7;
+  padding: 13px 20px;
+  border: none;
+  cursor: pointer;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
-.title form button svg{
-	color: #ffffff;
+.title form button svg {
+  color: #ffffff;
 }
 
-.title form button:hover{
-	background-color: #000000;
+.title form button:hover {
+  background-color: #000000;
 }
 
 .list_movies article {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	margin-bottom: 2em;
-	width: 19%;
-	height: 410px;
-	color: #ffffff;
-	border-radius: 5px;
-	background-color: #ffffff;
-	padding: 0.5em;
-	box-shadow: 0 1px 4px rgb(0 0 0 / 16%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 2em;
+  width: 19%;
+  height: 410px;
+  color: #ffffff;
+  border-radius: 5px;
+  background-color: #ffffff;
+  padding: 0.5em;
+  box-shadow: 0 1px 4px rgb(0 0 0 / 16%);
 }
 
 .list_movies article:hover {
-	box-shadow: none;
-	border: 1px solid #cccccc;
+  box-shadow: none;
+  border: 1px solid #cccccc;
 }
 
 .list_movies strong {
-	margin-top: 10px;
-	margin-bottom: 10px;
-	text-align: center;
-	font-size: 0.95em;
-	display: block;
-	color: #000000;
-	font-weight: 700;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 0.95em;
+  display: block;
+  color: #000000;
+  font-weight: 700;
 }
 
 .list_movies strong:hover {
-	color: #116feb;
+  color: #116feb;
 }
 
 .list_movies img {
-	display: inline-block;
-	max-width: 100%;
-	max-height: 340px;
-	object-fit: cover;
-	border-radius: 5px;
+  display: inline-block;
+  max-width: 100%;
+  max-height: 340px;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 .list_movies a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 .list_movies p {
-	font-size: 0.95em;
-	color: rgba(0, 0, 0, 0.6);
+  font-size: 0.95em;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .list_movies .progressbar {
-	background-color: #ffffff;
-	width: 45px;
-	height: 45px;
-	margin-top: -30px;
-	border-radius: 50%;
-	box-shadow: 0 1px 4px rgb(0 0 0 / 16%);
+  background-color: #ffffff;
+  width: 45px;
+  height: 45px;
+  margin-top: -30px;
+  border-radius: 50%;
+  box-shadow: 0 1px 4px rgb(0 0 0 / 16%);
 }
 
 .list_movies .progressbar text {
-	font-size: 1.7em;
-	font-weight: bold;
-	user-select: none;
+  font-size: 1.7em;
+  font-weight: bold;
+  user-select: none;
 }
 
 @media screen and (min-width: 0px) and (max-width: 1024px) {
-	.list_movies, .title {
-		padding: 10px;
-		margin: 20px auto;
-	}
-	.list_movies article {
-		height: auto;
-	}
+
+  .list_movies,
+  .title {
+    padding: 10px;
+    margin: 20px auto;
+  }
+
+  .list_movies article {
+    height: auto;
+  }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
-	.list_movies article {
-		width: 23%;
-	}
+  .list_movies article {
+    width: 23%;
+  }
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
-	.list_movies article {
-		width: 32%;
-	}
+  .list_movies article {
+    width: 32%;
+  }
 }
 
 @media screen and (max-width: 539px) {
-	.title form input{
-		width: 80%;
-	}
+  .title form input {
+    width: 80%;
+  }
 
-	.title form button{
-		width: 20%;
-	}
+  .title form button {
+    width: 20%;
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
-	.list_movies article {
-		width: 48%;
-	}
+  .list_movies article {
+    width: 48%;
+  }
 }
 
 @media screen and (min-width: 0px) and (max-width: 319px) {
-	.list_movies article {
-		width: 90%;
-		margin: 10px auto;
-	}
+  .list_movies article {
+    width: 90%;
+    margin: 10px auto;
+  }
 }
